# Aura-Programming-Language

./: .gitignore  AURA_BIBLE.md  AURA_BRAIN_README.md  AURA_COMMANDS.md  AuraProgrammingLanguage.code-workspace  COMMAND_REFERENCE.md  CONTRIBUTING.md  EXAMPLES.md  EXTENDING.md  Good.aura  INDEX.md  LICENSE  MANIFEST.in  NATURAL_LANGUAGE.md  PHASE_2.5_STATUS.md  PHASE_2.6_COMPLETE.md  PHASE_2.6_STATUS.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICKSTART_2.5.md  QUICK_REFERENCE.md  README.md  SECURITY.md  STATUS.md  TESTING_2.6.md  THEN_KEYWORD.md  UPDATE_SUMMARY.md  USING_AURA_COMMAND.md  WINDOWS_ENCODING_FIX.md  aura.bat  aura.config.py  aura.ps1  aura.tmLanguage.json  debug_brain_full.py  demo.aura  demo_full.aura  error.txt  example.aura  grade_calculator.py  logic_test.py  (+14 more)
.aura_engine/: package-lock.json  package.json  vite.config.js
.github/: pull_request_template.md
aura_lang.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
aura_prog_lang.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: ARCHITECTURE.md  AURA_2.5_LIVING_RUNTIME.md  AURA_CORE.md  AURA_DEV_COMPLETE.md  AURA_DEV_SERVER.md  AURA_INIT.md  HOW_TO_MAKE_BEAUTIFUL_READMES.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION.md  PHASE_2.5_COMPLETE.md  PHASE_2.6_COMPLETE.md  PHASE_2_COMPLETE.md  PHASE_3.0_COMPLETE.md  PHASE_3.1_COMPLETE.md  PHASE_4.0_COMPLETE.md  PHASE_5.0_COMPLETE.md  QUICK_REFERENCE_CORE.md  WATCH_MODE.md
examples/: Good.aura  New_app.aura  To-do.aura  about.aura  aura_5.aura  aura_landing.aura  barber.aura  counter.aura  error_test.aura  grade_calculator.aura  kingenious_store.aura  logic_test.aura  my_calculator.aura  simple_logic.aura  store.aura  test.aura  test_nl.aura  test_then.aura
inspector/: __init__.py  server.py
pages/: About.aura  Home.aura
playground/: index.html  package-lock.json  package.json
runtime/: __init__.py  console.py  engine.py  errors.py  events.py  integrity.py  introspection.py  memory.py  recorder.py  state.py  time_engine.py
(+58 files in other folders)
